# docker

./: .sugar.yaml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
conda/: dev.yaml
containers/: Dockerfile  compose.dev.yaml  compose.prod.yaml
containers/django/dev/: Dockerfile
containers/django/production/: Dockerfile
