[tool.poetry]
name = "mhai-web"
version = "0.1.0"
description = ""
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
python-slugify = "^8.0.4"
pillow = "^10.4.0"
rcssmin = "^1.1.2"
argon2-cffi = "^23.1.0"
whitenoise = "^6.7.0"
redis = "^5.0.8"
hiredis = "^3.0.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
flower = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
uvicorn-worker = "^0.2.0"
django = "^5.1.1"
django-environ = "^0.11.2"
django-model-utils = "^5.0.0"
django-allauth = {extras = ["mfa"], version = "^65.0.1"}
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
django-compressor = "^4.5.1"
django-redis = "^5.4.0"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
drf-spectacular = "^0.27.2"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
sentry-sdk = "^2.14.0"
django-anymail = "^12.0"
django-simple-history = "^3.7.0"
openai = "^1.30.1"
torch = {version = "^2.3.0+cpu", source = "pytorch-cpu-src"}
dash = "^2.17.0"
plotly = "^5.22.0"
pandas = "^2.2.2"
joblib = ">=1.4.2"
tiktoken = "^0.7.0"
transformers = ">=4.46"


[tool.poetry.group.dev.dependencies]
makim = "1.19.0"
compose-go = ">=2.29.7,<2.31.0"
containers-sugar = "1.16.1"
ruff = "^0.6.8"
watchdog = "^5.0.2"
werkzeug = {extras = ["watchdog"], version = "^3.0.4"}
ipdb = "^0.13.13"
watchfiles = "^0.24.0"
mypy = "^1.11.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.0"}
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
djangorestframework-stubs = "^3.15.1"
coverage = "^7.6.1"
djlint = "^1.35.2"
pre-commit = "^3.8.0"
factory-boy = "^3.3.1"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
django-coverage-plugin = "^3.1.0"
pytest-django = "^4.9.0"
mccabe = "^0.7.0"
vulture = "^2.12"
bandit = "^1.7.10"
pytest-cov = ">=5"
jupyterlab = ">=4.0.5"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = {version=">=0.24.3", extras=["python"]}
mkdocs-gen-files = ">=0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
